# asdis

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/decoder/: decode.rs  decode16.rs  decode32.rs  mod.rs
src/isa/: isa.rs  isa32C.rs  isa32I.rs  isa32_c.rs  isa32_i.rs  isa32_i_old.rs  mod.rs
src/primitives/: instruction.rs  instruction32.rs  instructions.rs  instructionsc.rs  mod.rs  primitives.rs  primitivesc.rs
