[package]
name = "riscv-dis"
version = "0.1.0"
authors = ["Roman Salmin <Roman.Salmin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
ux = "0.1"
regex = "1.4"
lazy_static = "1.4"
proc-macro2 = "1.0"
quote = "1.0"
num-traits= "0.2"

[lib]
proc-macro = true
